# MacMTP

./: .gitignore  AGENTS.md  README.md
MacMTP/MacMTP/: BrowserCommandContext.swift  BrowserCommands.swift  ContentView.swift  MacMTPApp.swift
MacMTP/MacMTP.xcodeproj/: project.pbxproj
MacMTP/MacMTP/Bridge/: MTPBridge.swift  MTPProcess.swift  Models.swift
MacMTP/MacMTP/Models/: FavoriteLocation.swift  FileDragItem.swift  FileItem.swift
MacMTP/MacMTP/ViewModels/: BrowserTabStore.swift  LocalBrowserViewModel.swift  MTPBrowserViewModel.swift  TransferProgressStore.swift
MacMTP/MacMTP/Views/: FileBrowserPaneView.swift
MacMTP/MacMTP/Views/Browser/: BrowserDetailView.swift
MacMTP/MacMTP/Views/Sidebar/: SidebarView.swift
MacMTP/MacMTP/Views/TabBar/: FinderTabBar.swift
MacMTP/MacMTPTests/: MacMTPTests.swift
MacMTP/MacMTPUITests/: MacMTPUITests.swift  MacMTPUITestsLaunchTests.swift
mtp-daemon/: Cargo.toml  build.rs  seize_usb.c
mtp-daemon/src/: main.rs  protocol.rs
