[package]
name = "mtp-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
mtp-rs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }
bytes = "1"
futures = "0.3"
base64 = "0.22"

[build-dependencies]
cc = "1"
